fix: add extra padding for navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,7 +158,7 @@ button.extra-large {
   z-index: 1;
   top: 0;
   overflow-x: hidden;
-  padding-top: 20px;
+  padding-top: 70px;
 }
 
 .gradient {
